updated src to libSrc updated apps to appSrc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,22 +14,22 @@ find_package(opencv REQUIRED)
 
 # Create the library
 add_library(MPSToolKit SHARED
-            ./src/TransferFunctions/HDR_TranFunc.cpp
-            ./src/TransferFunctions/HDR_TranFunc.hpp
-            ./src/Color/ColorSpaces.cpp
-            ./src/Color/ColorSpaces.hpp)
+            ./libSrc/TransferFunctions/HDR_TranFunc.cpp
+            ./libSrc/TransferFunctions/HDR_TranFunc.hpp
+            ./libSrc/Color/ColorSpaces.cpp
+            ./libSrc/Color/ColorSpaces.hpp)
 
 # Find OpenCV package and Link it to the MPSToolKit Libary
 target_link_libraries(MPSToolKit ${OpenCV_LIBRARIES})
 
 # Compile the executables
-add_executable(EOTF ./apps/Calculate_PQ_EOTF.cpp)
-add_executable(GetPrimaries ./apps/GetPrimaries.cpp)
-add_executable(ToICtCp ./apps/ToICtCp.cpp)
+add_executable(EOTF ./appSrc/Calculate_PQ_EOTF.cpp)
+add_executable(GetPrimaries ./appSrc/GetPrimaries.cpp)
+add_executable(ToICtCp ./appSrc/ToICtCp.cpp)
 
 # Show Cmake where to find the header files
-include_directories(./src/TransferFunctions
-                    ./src/Color)
+include_directories(./libSrc/TransferFunctions
+                    ./libSrc/Color)
 
 # Links the MPS toolkit library to Apps
 target_link_libraries(EOTF MPSToolKit)
