added MPS::tripletF/D. to prevent heap allocation with std::vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(opencv REQUIRED)
 
 # Create the library
 add_library(MPSToolKit SHARED
+            ./libSrc/Core/macro_typedef.hpp
             ./libSrc/TransferFunctions/HDR_TranFunc.cpp
             ./libSrc/TransferFunctions/HDR_TranFunc.hpp
             ./libSrc/Color/ColorSpaces.cpp
@@ -23,6 +24,7 @@ add_library(MPSToolKit SHARED
             ./libSrc/Utilities/utilities.cpp
             ./libSrc/Utilities/utilities.hpp
             ./libSrc/Utilities/programOptions.cpp
+            ./libSrc/Utilities/csvReader.cpp
 )
 
 # Find OpenCV package and Link it to the MPSToolKit Libary
@@ -32,13 +34,16 @@ target_link_libraries(MPSToolKit ${OpenCV_LIBRARIES})
 add_executable(EOTF ./appSrc/Calculate_PQ_EOTF.cpp)
 add_executable(GetPrimaries ./appSrc/GetPrimaries.cpp)
 add_executable(ToICtCp ./appSrc/ToICtCp.cpp)
+add_executable(TEST ./appSrc/testProgram.cpp)
 
 # Show Cmake where to find the header files
 include_directories(./libSrc/TransferFunctions
                     ./libSrc/Color
-                    ./libSrc/Utilities)
+                    ./libSrc/Utilities
+                    ./libSrc/Core)
 
 # Links the MPS toolkit library to Apps
 target_link_libraries(EOTF MPSToolKit)
 target_link_libraries(GetPrimaries MPSToolKit)
 target_link_libraries(ToICtCp MPSToolKit)
+target_link_libraries(TEST MPSToolKit)
