--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
 find_package(opencv REQUIRED)
 
 # Create the library
-add_library(MPSToolKit SHARED
+add_library(MPSToolkit SHARED
             ./libSrc/TransferFunctions/HDR_TranFunc.cpp
             ./libSrc/Color/ColorSpaces.cpp
             ./libSrc/Color/deltaE.cpp
@@ -23,12 +23,12 @@ add_library(MPSToolKit SHARED
 )
 
 # Find OpenCV package and Link it to the MPSToolKit Libary
-target_link_libraries(MPSToolKit ${OpenCV_LIBRARIES})
+target_link_libraries(MPSToolkit ${OpenCV_LIBRARIES})
 
 # Add Pybind11 and create MPS python module 
 add_subdirectory(ThirdParty/pybind11)
-pybind11_add_module(py_mpsToolKit  ./libSrc/PythonBindings/PythonBindings.cpp)
-target_link_libraries(py_mpsToolKit PUBLIC MPSToolKit)
+pybind11_add_module(py_mpsToolkit  ./libSrc/PythonBindings/PythonBindings.cpp)
+target_link_libraries(py_mpsToolkit PUBLIC MPSToolkit)
 
 # Compile the apps executables
 add_executable(EOTF ./appSrc/Calculate_PQ_EOTF.cpp)
@@ -43,7 +43,7 @@ include_directories(./libSrc/TransferFunctions
                     ./libSrc/Core)
 
 # Links the MPS toolkit library to Apps
-target_link_libraries(EOTF MPSToolKit)
-target_link_libraries(GetPrimaries MPSToolKit)
-target_link_libraries(ToICtCp MPSToolKit)
-target_link_libraries(TEST MPSToolKit)
+target_link_libraries(EOTF MPSToolkit)
+target_link_libraries(GetPrimaries MPSToolkit)
+target_link_libraries(ToICtCp MPSToolkit)
+target_link_libraries(TEST MPSToolkit)
