removed cpy-pstd code. added de2000 lib to 3rd prty

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(MPSToolkit SHARED
             ./libSrc/TransferFunctions/HDR_TranFunc.cpp
             ./libSrc/Color/ColorSpaces.cpp
             ./libSrc/Color/deltaE.cpp
+            ./ThirdParty/CIEDE2000/CIEDE2000.cpp
             ./libSrc/Utilities/utilities.cpp
             ./libSrc/Utilities/programOptions.cpp
             ./libSrc/Utilities/csvReader.cpp
